<resources>
    <string name="app_name">FoodAdvisor</string>
    <string name="whoare">Dicci chi sei</string>
    <string name="observer">Utente</string>
    <string name="tracker">Login per aziende</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="loading">Caricamento in corso…</string>

    <string name="action_register">Registrati</string>
    <string name="title_activity_maps">Tracciamento</string>
    <string name="track_description">"Se sei vicino ad uno dei nostri prodotti puoi iniziare a tracciare il cibo premendo qui sotto. Ti verrà mostrata una mappa con tutto il percorso che il cibo ha fatto da produttore a consumatore."</string>
    <string name="app_description">Descrizione app</string>
    <string name="pref_title_sync_frequency">sda</string>
    <string name="pref_title_system_sync_settings">title</string>
    <string name="pref_description_social_recommendations">facebook</string>
    <string name="pref_title_social_recommendations">prova</string>
    <string name="pref_default_display_name">asd</string>
    <string name="pref_title_display_name">pref_title_display_name</string>
    <string name="pref_title_add_friends_to_messages">pref_title_add_friends_to_messages</string>
    <string name="pref_title_new_message_notifications">pref_title_new_message_notifications</string>
    <string name="pref_title_ringtone">pref_title_rington</string>
    <string name="pref_title_vibrate">pref_title_vibrate</string>

    <string name="confirm_password">Conferma password</string>

    <string name="title_activity_login">Accedi</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi o registrati</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="error_invalid_email">Email non valida</string>
    <string name="error_invalid_password">Password non valida</string>
    <string name="error_incorrect_password">Password non corretta </string>
    <string name="error_field_required">Questo campo è richiesto</string>
    <string name="permission_rationale">"Per proseguire è necessaria l'autorizzazione."</string>
    <string name="cognome_titolare">Cognome Titolare</string>
    <string name="email">Email</string>
    <string name="nome_titolare">Nome Titolare</string>
    <string name="iva_code">P. IVA</string>
    <string name="password">Password</string>
    <string name="registrati">Registrati</string>
    <string name="telefono">Telefono</string>
    <string name="username_azienda">Username Azienda</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Impostazioni</string>
    <string name="main_logo_app">Main logo of the app</string>

    <string name="empty" />
    <string name="name_producer">Nome Azienda</string>
    <string name="mail_producer">user@host.com</string>
    <string name="suggest">Consiglia</string>
    <string name="share">Crediti</string>
    <string name="social">Social</string>
    <string name="my_products">I miei prodotti</string>
    <string name="track">Traccia</string>
    <string name="my_profile">Profilo</string>
    <string name="fragment_scan_info">Da qui puoi aggiungere la transazione del prodotto che hai ricevuto da un altro tracker.\nScannerizza il QR Code presente sul prodotto.\n(È necessario avere internet e GPS attivo).</string>
    <string name="bug_report">Segnala un bug</string>
    <string name="track_food">Traccia il cibo</string>
    <string name="temp_track_text">Qui verranno mostrati i prodotti dell\'azienda</string>
    <string name="user_mode">User Mode</string>
    <string name="route">Segui il percorso del cibo</string>
    <string name="user_mode_desc">Da questa schermata puoi seguire il percorso del cibo. Scannerizza il QR Code per vedere tutti i passaggi che il cibo compie e fin dove arriva!</string>
    <string name="main_desc">Benvenuto! Seleziona una delle attività nella barra a sinistra per iniziare.</string>
    <string name="new_product">Aggiungi un prodotto</string>
    <string name="add_new_product">Aggiungi nuovo prodotto</string>
    <string name="new_product_name">Nome nuovo prodotto</string>
    <string name="new_product_desc">Descrizione nuovo prodotto</string>
    <string name="latitude">Latitudine: </string>
    <string name="longitude">Longitudine: </string>
    <string name="take_photo">Foto (non disponibile ancora)</string>
    <string name="new_product_info">Da qui puoi registrare nel database un nuovo prodotto. Clicca sul bottone per continuare</string>
    <string name="get_location">Setta le coordinate</string>
    <string name="profile_pic_desc">Foto Profilo</string>
    <string name="descrizione_azienda">Descrizione Azienda</string>
    <string name="nome_intestatario">Nome Intestatario</string>
    <string name="id_description">Codice identificativo (ID)</string>
    <string name="come_back">Torna indietro</string>
    <string name="ok_response">OK!</string>
    <string name="fragment_scan_title">Aggiungi transazione</string>
    <string name="add_transaction">Aggiungi transazione</string>
    <string name="permissions_needed">L\'app non funziona se non ha accesso al GPS</string>
    <string name="logout_string">Logout</string>
    <string name="my_products_title">I miei prodotti</string>
    <string name="profile_desc">Informazioni personali</string>
    <string name="bug_report_description">Per favore descrivi il problema che hai riscontrato nell\'utilizzo dell\'app e inviacelo attraverso la tua mail preferita. Stai attento a non cambiare alcun dato precompilato oppure la mail non verrà presa in considerazione.</string>
    <string name="bug_description">Descrivi qui il bug riscontrato (min 50 caratteri)</string>
    <string name="title_app_selector_name">Invio la mail…</string>
    <string name="send_bug">Invia ticket</string>
    <string name="bug_disclamer">I dati raccolti verranno usati esclusivamente a scopo di risolvere il problema presentato nel miglior modo possibile e non per alcun altro fine.</string>
    <string name="copyright">FoodAdvisor 2016–2017</string>
    <string name="credits_desc">A work by RaNe : Raging Nerds:</string>
    <string name="credits_protagonists">Alejandro Ont\nAndrea Lacava\nFabio Pacileo\nDaniele Volpe\nGabrio Tognozzi</string>
    <string name="credits_friends_desc">A real special thanks to our friends:</string>
    <string name="credits_friends" >Marino Spitoni (Design)\nCyril Glerum-Imbert (Logo)\nSilvia Iacomelli (Promotional video)</string>
    <string name="scannerizza_qrcode">Scannerizza QRCODE</string>
    <string name="prod_id_desc">Id :</string>
    <string name="carica_immagine">carica immagine</string>
    <string name="descrizione">Descrizione</string>
    <string name="edit_img">Modifica immagine</string>
    <string name="permessi_fotocamera">Permessi fotocamera</string>
    <string name="permessi_gps">Permessi GPS</string>
    <string name="disclamer_setting">Senza questi permessi l\'app non funzionerà correttamente, perfavore abiliti i permessi non segnati.</string>
    <string name="product_new_photo">Foto nuovo prodotto</string>
    <string name="save_image">Salva Immagine</string>
    <string name="viaggio_prodotto">Viaggio prodotto</string>
    <string name="product_image">Immagine Prodotto</string>
    <string name="product_name">Nome:</string>
    <string name="product_description">Descrizione:</string>
    <string name="permessi_external">Permessi archiviazione</string>
    <string name="delete_product">Cancella Prodotto</string>
    <string name="helper_arrow">Helper arrow</string>


</resources>
