<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:id="@+id/textInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/new_product_name"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:id="@+id/productName"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textInputLayout"
        android:id="@+id/textInputLayout2">
        <EditText
            android:id="@+id/productDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout"
            android:ems="10"
            android:hint="@string/new_product_desc"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_product"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/textView8" />

    <Button
        android:id="@+id/new_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_product"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"
        android:layout_marginBottom="39dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="getValues"/>

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location"
        android:layout_above="@+id/new_product_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"></ProgressBar>

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/new_product_button" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/new_product_button" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/take_photo"
        android:layout_below="@+id/textInputLayout2"
        android:layout_alignStart="@+id/btnLocation" />
</RelativeLayout>