<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="@string/bug_report"
        android:layout_below="@+id/toolbar6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:text="@string/bug_report_description"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/body_mail_bug"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:ems="10"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/bug_description"
        android:textSize="15sp"
        android:maxLength="2000"
        android:maxLines="4"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_send_bug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_bug"
        android:layout_below="@+id/textView19"
        android:layout_centerHorizontal="true"
        style="?android:textAppearanceSmall"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/body_mail_bug"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:text="@string/bug_disclamer" />

</RelativeLayout>