<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >

    <ImageView
        android:layout_width="394dp"
        android:layout_height="124dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:onClick="userPath"
        android:layout_weight="1"
        android:contentDescription="@string/main_logo_app" />


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleView"
        android:textSize="30sp"
        android:textColor="@color/contents_text"
        android:layout_weight="1"
        android:textAlignment="center" />

    <TextView
        android:text="@string/observer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/Observer"
        android:fontFamily="sans-serif"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textColor="@color/strings_white"
        android:onClick="userPath"
        />


    <TextView
        android:text="@string/tracker"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:id="@+id/Tracker"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:autoLink="all"
        android:clickable="true"
        android:layout_gravity="center"
        android:textColor="@color/strings_white"
        android:layout_marginTop="10dp"
        android:onClick="producerPath"
        android:layout_weight="1" />

</LinearLayout>
