<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:layout_width="394dp"
        android:layout_height="124dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/main_logo_app" />


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleView"
        android:textSize="30sp"
        android:textColor="@color/contents_text"
        android:layout_weight="1"
        android:textAlignment="center" />

        <Button
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/observer"
            android:textStyle="bold"
            style="?android:textAppearanceSmall"/>


        <Button
            android:id="@+id/producer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tracker"
            android:textStyle="bold"
            style="?android:textAppearanceSmall"/>


</LinearLayout>
