<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="pro.rane.foodadvisor.StartScreen">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/main_logo_app"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/strings"
        android:textSize="50sp"
        android:layout_marginTop="38dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp" />


    <Button
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_food"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/producer"
        android:layout_marginEnd="19dp" />


    <Button
        android:id="@+id/producer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracker"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"
        android:layout_marginEnd="11dp"
        android:layout_alignBaseline="@+id/user"
        android:layout_alignBottom="@+id/user"
        android:layout_alignEnd="@+id/titleView" />

</RelativeLayout>
